# agvision-site

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
pages/: call_papers.md  challenges.md  index.md  program_schedule.md
pages/overrides/: home.html  main.html  new_content.html  schedule.html
pages/overrides/partials/: header.html
pages/overrides/stylesheets/: extra.css  schedule.css
pages/past_workshops/: ag_vision_2023.md
scripts/: install.sh
